--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         beautiful websites just for fun. This blog is my personal passion project—a little corner of the internet where
         I share anything and everything I find exciting or interesting.
     </P>
-    <p> Beyond all the geeky tech talk and algorithmic adventures, I'm a huge fan of cars that race in circles at
+    <p> Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
         incredible speeds (tu tu tu, Max Verstappen! 🦁).</p>
     <h2>📑Blogs</h2>
     <h3>
