--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>🧸About me</h2>
     <P>
         I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and building
-        beautiful websites just for fun. This blog is my personal passion project—a little corner of the internet where
+        websites just for fun. This blog is my personal passion project —a little corner of the internet where
         I share anything and everything I find exciting or interesting.
     </P>
     <p> Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
