--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <footer>
     note: this website is still under construction🦺
-    for any suggestions or queries, feel free to reach out to me 📮 s.aashritha14@gmail.com
+    <p> for any suggestions or queries, feel free to reach out to me 📮 s.aashritha14@gmail.com </p>
 </footer>
 
 </html>
