--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         incredible speeds (tu tu tu, Max Verstappen! 🦁).</p>
     <h2>📑Blogs</h2>
     <h3>
-        <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d">
+        <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target ="_blank">
             🐝Basics of NLP
         </a>
     </h3>
