--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 <body>
     <h1>Aashritha's Blog </h1>
+    
     <h2>
-        🧸About me <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target ="_blank"> </a>
+        <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target ="_blank"> </a>
+        🧸About me 
         
     </h2>
     <a>
