--- a/index.html
+++ b/index.html
@@ -1,41 +1,92 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AASHRITHA REDDY</title>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: #f9f9f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin-top: 20px;
+        }
+
+        h2 {
+            font-size: 1.8em;
+            margin-top: 20px;
+        }
+
+        h3 {
+            font-size: 1.4em;
+        }
+
+        p {
+            font-size: 1.1em;
+            max-width: 600px;
+            margin: 10px auto;
+            line-height: 1.6;
+        }
+
+        a {
+            text-decoration: none;
+            color: #0077ff;
+            font-weight: 600;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #0055cc;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 30px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+            margin-top: 50px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Aashritha's Blog </h1>
-    
-    <h2>
-        <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target ="_blank"> 
-        🧸About me 
-        </a>
-    </h2>
-    <a>
-    <P>
-        I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and building
-        websites just for fun. This blog is my personal passion project —a little corner of the internet where
-        I share anything and everything I find exciting or interesting.
-    </P>
-    <p> Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
-        incredible speeds (tu tu tu, Max Verstappen! 🦁).</p>
-    <h2>📑Blogs</h2>
-    <h3>
-        <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target ="_blank">
-            🐝Basics of NLP
-        </a>
-    </h3>
+    <div class="container">
+        <h1>Aashritha's Blog</h1>
+
+        <h2>
+            <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target="_blank">
+                🧸 About Me
+            </a>
+        </h2>
+
+        <p>
+            I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and building
+            websites just for fun. This blog is my personal passion project — a little corner of the internet where
+            I share anything and everything I find exciting or interesting.
+        </p>
+
+        <p> Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
+            incredible speeds (tu tu tu, Max Verstappen! 🦁).
+        </p>
+
+        <h2>📑 Blogs</h2>
+
+        <h3>
+            <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target="_blank">
+                🐝 Basics of NLP
+            </a>
+        </h3>
+    </div>
 </body>
-
-
-
-
-
-
-<footer>
-    note: this website is still under construction🦺
-    <p> for any suggestions or queries, feel free to reach out to me 📮 s.aashritha14@gmail.com </p>
-</footer>
 
 </html>
