--- a/index.html
+++ b/index.html
@@ -5,19 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AASHRITHA REDDY</title>
+
     <style>
+        /* Default Light Mode */
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Courier New', Courier, monospace;
             background: #f9f9f9;
             color: #333;
             margin: 0;
             padding: 0;
-            text-align: center;
+            transition: background 0.3s ease, color 0.3s ease;
         }
 
-        h1 {
+        /* Container */
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 30px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+            transition: background 0.3s ease, color 0.3s ease;
+        }
+
+        /* Dark Mode */
+        .dark-mode {
+            background: #121212;
+            color: #f9f9f9;
+        }
+
+        .dark-mode .container {
+            background: #1e1e1e;
+            color: #f9f9f9;
+            box-shadow: 0px 10px 30px rgba(255, 255, 255, 0.1);
+        }
+
+        /* Typewriter Effect */
+        .typewriter {
+            text-align: left;
+            white-space: nowrap;
+            overflow: hidden;
+            border-right: 3px solid black;
             font-size: 2.5em;
-            margin-top: 20px;
+            width: 0;
+            animation: typing 3s steps(20, end) forwards, blink 0.6s steps(2, start) 3s;
+        }
+
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+            to {
+                width: 18ch;
+            }
+        }
+
+        @keyframes blink {
+            50% {
+                border-color: transparent;
+            }
+            100% {
+                border-color: transparent;
+            }
         }
 
         h2 {
@@ -39,7 +88,7 @@
         a {
             text-decoration: none;
             color: #0077ff;
-            font-weight: 600;
+            font-weight: bold;
             transition: color 0.3s ease;
         }
 
@@ -47,46 +96,117 @@
             color: #0055cc;
         }
 
-        .container {
-            max-width: 800px;
-            margin: auto;
-            padding: 30px;
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
-            margin-top: 50px;
+        .dark-mode a {
+            color: #66aaff;
+        }
+
+        section {
+            margin-bottom: 30px;
+            padding: 20px;
+            border-bottom: 2px solid #ddd;
+        }
+
+        section:last-child {
+            border-bottom: none;
+        }
+
+        /* Blog Box */
+        .blog-box {
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            padding: 15px;
+            background: #f8f8f8;
+            margin-top: 15px;
+            text-align: center;
+        }
+
+        .dark-mode .blog-box {
+            background: #2a2a2a;
+            border-color: #444;
+        }
+
+        /* Toggle Button */
+        .toggle-btn {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 8px 16px;
+            font-size: 0.9em;
+            cursor: pointer;
+            background: #0077ff;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            transition: background 0.3s ease;
+            z-index: 1000; /* Keeps button above other elements */
+        }
+
+        .toggle-btn:hover {
+            background: #0055cc;
+        }
+
+        .dark-mode .toggle-btn {
+            background: #444;
+        }
+
+        .dark-mode .toggle-btn:hover {
+            background: #666;
         }
     </style>
 </head>
 
 <body>
+    <!-- Toggle Button -->
+    <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+
     <div class="container">
-        <h1>Aashritha's Blog</h1>
+        <header>
+            <h1 class="typewriter">Aashritha's Blog</h1>
+        </header>
 
-        <h2>
-            <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target="_blank">
-                🧸 About Me
-            </a>
-        </h2>
+        <section id="about">
+            <h2>
+                <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target="_blank">
+                    🧸 About Me
+                </a>
+            </h2>
+            <p>
+                I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and building
+                websites just for fun. This blog is my personal passion project — a little corner of the internet where
+                I share anything and everything I find exciting or interesting.
+            </p>
+            <p>
+                Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
+                incredible speeds (tu tu tu, Max Verstappen! 🦁).
+            </p>
+        </section>
 
-        <p>
-            I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and building
-            websites just for fun. This blog is my personal passion project — a little corner of the internet where
-            I share anything and everything I find exciting or interesting.
-        </p>
-
-        <p> Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
-            incredible speeds (tu tu tu, Max Verstappen! 🦁).
-        </p>
-
-        <h2>📑 Blogs</h2>
-
-        <h3>
-            <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target="_blank">
-                🐝 Basics of NLP
-            </a>
-        </h3>
+        <section id="blogs">
+            <h2>📑 Blogs</h2>
+            <div class="blog-box">
+                <h3>Basics of NLP</h3>
+                <p>Natural Language Processing (NLP) is the intersection of linguistics and artificial intelligence, enabling computers to understand and process human language.</p>
+                <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target="_blank">
+                    Read More
+                </a>
+            </div>
+        </section>
     </div>
+
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+
+            // Toggle button text & icon
+            const btn = document.querySelector(".toggle-btn");
+            if (document.body.classList.contains("dark-mode")) {
+                btn.textContent = "☀️ Light Mode";
+            } else {
+                btn.textContent = "🌙 Dark Mode";
+            }
+        }
+    </script>
+
 </body>
 
 </html>
