--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         /* Default Light Mode */
         body {
             font-family: 'Courier New', Courier, monospace;
-            background: #f9f9f9;
+            background: linear-gradient(to bottom, #ffefba, #ffffff);
             color: #333;
             margin: 0;
             padding: 0;
-            transition: background 0.3s ease, color 0.3s ease;
+            transition: background 2s ease, color 0.3s ease;
         }
 
         /* Container */
@@ -30,7 +30,7 @@
 
         /* Dark Mode */
         .dark-mode {
-            background: #121212;
+            background: linear-gradient(to bottom, #0d1b2a, #1b263b);
             color: #f9f9f9;
         }
 
@@ -175,10 +175,6 @@
                 websites just for fun. This blog is my personal passion project — a little corner of the internet where
                 I share anything and everything I find exciting or interesting.
             </p>
-            <p>
-                Beyond all the geeky tech talk and algorithms, I'm a huge fan of cars that race in circles at
-                incredible speeds (tu tu tu, Max Verstappen! 🦁).
-            </p>
         </section>
 
         <section id="blogs">
@@ -189,6 +185,10 @@
                 <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target="_blank">
                     Read More
                 </a>
+            </div>
+            <div class="blog-box">
+                <h3>DSA - Coming Soon</h3>
+                <p>Stay tuned for exciting content on Data Structures and Algorithms!</p>
             </div>
         </section>
     </div>
@@ -206,7 +206,5 @@
             }
         }
     </script>
-
 </body>
-
 </html>
