--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             from {
                 width: 0;
             }
+
             to {
                 width: 18ch;
             }
@@ -64,6 +65,7 @@
             50% {
                 border-color: transparent;
             }
+
             100% {
                 border-color: transparent;
             }
@@ -138,7 +140,8 @@
             border: none;
             border-radius: 6px;
             transition: background 0.3s ease;
-            z-index: 1000; /* Keeps button above other elements */
+            z-index: 1000;
+            /* Keeps button above other elements */
         }
 
         .toggle-btn:hover {
@@ -151,6 +154,39 @@
 
         .dark-mode .toggle-btn:hover {
             background: #666;
+        }
+
+        /* Footer */
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background: #f8f8f8;
+            color: #333;
+            margin-top: 30px;
+            transition: background 0.3s ease, color 0.3s ease;
+        }
+
+        .footer a {
+            color: #0077ff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .footer a:hover {
+            color: #0055cc;
+        }
+
+        .dark-mode .footer {
+            background: #1e1e1e;
+            color: #f9f9f9;
+        }
+
+        .dark-mode .footer a {
+            color: #66aaff;
+        }
+
+        .dark-mode .footer a:hover {
+            color: #88c0ff;
         }
     </style>
 </head>
@@ -166,12 +202,14 @@
 
         <section id="about">
             <h2>
-                <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4" target="_blank">
+                <a href="https://flash-bream-1cd.notion.site/Aashritha-Reddy-17a17bf3de1e808290e8e4218cfe4f41?pvs=4"
+                    target="_blank">
                     🧸 About Me
                 </a>
             </h2>
             <p>
-                I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and building
+                I'm a second-year Computer Science undergraduate with a passion for teaching machines to learn and
+                building
                 websites just for fun. This blog is my personal passion project — a little corner of the internet where
                 I share anything and everything I find exciting or interesting.
             </p>
@@ -181,17 +219,20 @@
             <h2>📑 Blogs</h2>
             <div class="blog-box">
                 <h3>Basics of NLP</h3>
-                <p>Natural Language Processing (NLP) is the intersection of linguistics and artificial intelligence, enabling computers to understand and process human language.</p>
-                <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d" target="_blank">
+                <p>Natural Language Processing (NLP) is the intersection of linguistics and artificial intelligence,
+                    enabling computers to understand and process human language.</p>
+                <a href="https://flash-bream-1cd.notion.site/Basics-of-NLP-14c17bf3de1e80a5bbeaf3a79696a82d"
+                    target="_blank">
                     Read More
                 </a>
             </div>
-            <div class="blog-box">
-                <h3>DSA - Coming Soon</h3>
-                <p>Stay tuned for exciting content on Data Structures and Algorithms!</p>
-            </div>
         </section>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        📮 Contact me at: <a href="mailto:s.aashritha14@gmail.com">s.aashritha14@gmail.com</a>
+    </footer>
 
     <script>
         function toggleDarkMode() {
@@ -207,4 +248,5 @@
         }
     </script>
 </body>
+
 </html>
